Repaired loading of internal resources